# EDOO

./: .gitignore  README.md  fails1case.cpp  teste.cpp  teste2.cpp  testes.cpp
.cph/: .AP1.cpp_433ee87aba6e3f06316b64f0f58259de.prob  .final.cpp_38dd4c001faab0de095dd430d8e960b6.prob  .teste.cpp_d0a9def887a7f1a3bcc7b1f7a73fd65d.prob  .teste2.cpp_9bc20e02dac0b9f512abd1dba22fb900.prob  .teste3.cpp_d2e0ce3f98b1183a20a0ced025d94694.prob
APS/: teste.cpp
APS/AP1/: AP1.cpp
APS/AP10/: Q1.cpp
APS/AP11/: Q1.cpp  Q1Antiga.cpp  Q2.cpp  teste.cpp
APS/AP12/: Ap12.cpp  Ap12Template.cpp
APS/AP2/: Ex1.cpp  Ex2.cpp  Ex3.cpp  Ex4.cpp  Ex5.cpp  Ex6.cpp  Ex7.cpp  myMacros.h
APS/AP3/: Ex1.cpp  Ex2.cpp  Ex3_2.cpp
APS/AP4/: Date.cpp  Date.h  main.cpp
APS/AP5/: fraction.cpp  fraction.h  main.cpp
APS/AP6/: Ex2.cpp  splice.cpp
APS/AP7/: teste.cpp
APS/Ap9/: Q1.cpp  Q2.cpp
BASICS CONCEPTS/: header_files.cpp
DataStructs/BST/: BST.cpp
EP/: Q1.cpp
EP/LinkedList/: Q1.cpp
HackerRank/: ArrIntro.cpp  Classtemplate.cpp  GreaterInt.cpp  VirtualFunct.cpp  pointers.cpp  string.cpp
Kirch-Prinz/: Polimorphism.cpp
ParseTree/: expressions.cpp  expressions.h  parse.cpp  parser.h
SI/: sketch.js
Tutorials/: Copyconstructors.cpp  ex_Parse.cpp
cpp-project/: abstractNode.h  expression.h  expressions.cpp  expressions.h  main.cpp  parse.cpp  parser.h
cpp-project/cpp-project/: CMakeLists.txt  README.md
cpp-project/cpp-project/src/: AbstractNode.h  BinaryOperatorNode.cpp  BinaryOperatorNode.h  LiteralNode.cpp  LiteralNode.h  main.cpp
teste/: Copyconstructors.cpp
(+61 files in other folders)
